# fastapi_tutorial

./: .gitignore  .hintrc  .pre-commit-config.yaml  pyproject.toml  test_db.db
backend/: justfile  main.py
backend/apis/: base.py
backend/apis/version1/: route_general_pages.py  route_jobs.py  route_login.py  route_users.py
backend/core/: config.py  security.py
backend/db/: session.py
backend/db/models/: jobs.py  users.py
backend/db/repository/: jobs.py  users.py
backend/schemas/: jobs.py  users.py
backend/templates/components/: navbar.html
backend/templates/general_pages/: homepage.html
backend/templates/shared/: base.html
backend/tests/: conftest.py
backend/tests/test_routes/: test_jobs.py
backend/tests/utils/: users.py
