[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["Max Ludden <dev@maxludden.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.83.0"
uvicorn = "^0.18.3"
Jinja2 = "^3.1.2"
dotenv = "^0.0.5"
aiofiles = "^22.1.0"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"
python-dotenv = "^0.21.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^7.1.3"
requests = "^2.28.1"
pydantic = {extras = ["email"], version = "^1.10.2"}
pre-commit = "^2.20.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
